feat(backend): standardize API contract for auth/portfolio/market